# CPP_3d_rendering

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  OpenGL_render.cpp  README.md  config.h.in  config.h.indep  main.cpp  physics.h
include/: app.h
src/: main.cpp  physics_engine.cpp
